--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@heroicons/react": "^2.2.0"
+        "@heroicons/react": "^2.2.0",
+        "nprogress": "^0.2.0"
     }
 }
