--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
-        "nprogress": "^0.2.0"
+        "nprogress": "^0.2.0",
+        "react-datepicker": "^7.5.0"
     }
 }
